# rory.cat

./: .gitignore  Cargo.toml  Gemfile  README.md  package.json
app/assets/stylesheets/: application.css
app/controllers/: api_controller.rb  application_controller.rb  home_controller.rb
app/helpers/: application_helper.rb
app/javascript/packs/: application.js
app/views/home/: by_id.html.erb  index.html.erb  offline.html.erb
app/views/layouts/: application.html.erb
config/: application.rb  cable.yml  credentials.yml.enc  database.yml  routes.rb
config/environments/: production.rb
config/locales/: en.yml  ru.yml
db/: schema.rb
public/: manifest.json  service-worker.js
src/: main.rs  schema.rs  state.rs
src/models/: image.rs
static/: index.html
static/assets/: application.css
